@@ -1,3 +1,9 @@
+2006-10-07 introduced dummy argument magnification=1.0 to
+           FigImage.make_image to satisfy unit test figimage_demo.py
+           The argument is not yet handled correctly, which should only
+	   show up when using non-standard DPI settings in PS backend,
+	   introduced by patch #1562394. - NN
+
 2006-10-06 add backend-agnostic example: simple3d.py - NN
 
 2006-09-29 fix line-breaking for SVG-inline images (purely cosmetic) - NN
